removed z-indexes of -1 because they caused bugs

--- a/assets/base/css/style.css
+++ b/assets/base/css/style.css
@@ -23,7 +23,8 @@ ul, ol, li {margin: 0 !important;}
 .dv-transition {transition: .5s;}
 .dv-second-section-bottom-item {height: 0;opacity: 0;}
 .dv-second-section-bottom-item.dv-current {height: auto;opacity: 1;}
-.dv-third-bg, .dv-fourth-bg {inset: 0;z-index: -1;object-fit: cover;}
+.dv-third-bg, .dv-fourth-bg {inset: 0;z-index: 1 !important;object-fit: cover;}
+.dv-contents {position: relative !important;z-index: 2 !important;}
 .dv-third-bg {height: 652px;}
 .dv-fourth-bg, section:nth-of-type(4) {height: 900px;}
 .dv-fourth-section-bottom-side > img{margin-bottom: -50rem !important;}
